<resources>
    <string name="app_name">Poly_Wuff</string>

    <string name="facebook_app_id">183998822097596</string>
    <string name="error">There has been an error!</string>
    <string name="Logout">LogOut</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main22">Main22Activity</string>
    <string name="search_bar">search_bar</string>
    <string name="title_activity_settings">Settings</string>
    <!-- string sendbird-->
    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>
    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>

    <string name="create_group_channel">Create Group Channel</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>
    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->
    <string name="action_create_channel">Create channel</string>

    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>


    <string name="all_group_channels">Group Channels</string>
    <string name="all_open_channels">Open Channels</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="PolyWuff">PolyWuff</string>
    <string name="profile">Profile</string>
    <string name="features">Features</string>
    <string name="messenger">Messenger</string>
    <string name="settings">Settings</string>
    <string name="create_an_account">Create an account?</string>
    <string name="or">OR</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main">PolyWuff</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>

    <!--- Map -->
    <string name="title_activity_maps">Map</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Toolbar headings for the settings activities -->
    <string name="title_activity_delete_account">Delete Account</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_password">Change password</string>
    <string name="title_activity_general">General</string>


    <!-- Block of text to be displayed on the about activity in the settigns -->
    <string name="about_text">
        <![CDATA[
            This app was made by: <br/><br/>
            Christopher Kambayi<br/><br/>
            Darren Gough<br/><br/>
            Dziugas Grusauskas<br/><br/>
            Emma English<br/><br/>
            Jordan May<br/><br/>
    ]]>
    </string>
    <string name="version_1_0">Version 1.0</string>

    <string name="title_activity_filter">FilterActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_home_">Home</string>
    <string name="title_activity_assist">Assist</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_socialise">Socialise</string>
    <string name="title_activity_blank">Blank</string>
</resources>
