<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_features"
        android:icon="@drawable/ic_directions_walk_black_24dp"
        android:title="@string/features" />

    <item
        android:id="@+id/navigation_messenger"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/messenger" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

</menu>
